exports[`OnboardingOccupation should enable pagination next button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 0.42857142857142855
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0.5714285714285714
        }
      } />
  </View>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16
        },
        Object {}
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      What do you do?
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#dfe5e6",
          "marginBottom": 27,
          "marginLeft": 24,
          "marginRight": 24
        },
        false
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Array [
            Object {
              "color": "#9fb1b3",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 9,
              "textAlign": "left"
            },
            undefined
          ]
        ]
      }>
      Job Sector
    </Text>
    <TextInput
      label="Job Sector"
      onBlur={[Function onBlur]}
      onChangeText={[Function onChangeText]}
      onFocus={[Function onFocus]}
      placeholderTextColor="#c0cbcc"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          },
          undefined
        ]
      }
      underlineColorAndroid="transparent"
      value="Family Member" />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#dfe5e6",
          "marginBottom": 27,
          "marginLeft": 24,
          "marginRight": 24
        },
        false
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Array [
            Object {
              "color": "#9fb1b3",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 9,
              "textAlign": "left"
            },
            undefined
          ]
        ]
      }>
      Job Title
    </Text>
    <TextInput
      label="Job Title"
      onBlur={[Function onBlur]}
      onChangeText={[Function onChangeText]}
      onFocus={[Function onFocus]}
      placeholderTextColor="#c0cbcc"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          },
          undefined
        ]
      }
      underlineColorAndroid="transparent"
      value="Uncle" />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end"
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OnboardingOccupation should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "backgroundColor": "#e5e5e5",
        "flexDirection": "row",
        "height": 6
      }
    }>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f77040"
          },
          Object {
            "flex": 0.42857142857142855
          }
        ]
      } />
    <View
      style={
        Object {
          "flex": 0.5714285714285714
        }
      } />
  </View>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16
        },
        Object {}
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          }
        ]
      }>
      What do you do?
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#dfe5e6",
          "marginBottom": 27,
          "marginLeft": 24,
          "marginRight": 24
        },
        false
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Array [
            Object {
              "color": "#9fb1b3",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 9,
              "textAlign": "left"
            },
            undefined
          ]
        ]
      }>
      Job Sector
    </Text>
    <TextInput
      label="Job Sector"
      onBlur={[Function onBlur]}
      onChangeText={[Function onChangeText]}
      onFocus={[Function onFocus]}
      placeholderTextColor="#c0cbcc"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          },
          undefined
        ]
      }
      underlineColorAndroid="transparent"
      value="" />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#dfe5e6",
          "marginBottom": 27,
          "marginLeft": 24,
          "marginRight": 24
        },
        false
      ]
    }>
    <Text
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 13,
            "textAlign": "center"
          },
          Array [
            Object {
              "color": "#9fb1b3",
              "fontFamily": "Brandon Text_bold",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 9,
              "textAlign": "left"
            },
            undefined
          ]
        ]
      }>
      Job Title
    </Text>
    <TextInput
      label="Job Title"
      onBlur={[Function onBlur]}
      onChangeText={[Function onChangeText]}
      onFocus={[Function onFocus]}
      placeholderTextColor="#c0cbcc"
      style={
        Array [
          Object {
            "color": "#003035",
            "fontFamily": "Brandon Text",
            "fontSize": 18,
            "lineHeight": 28,
            "marginBottom": 8,
            "padding": 0
          },
          undefined
        ]
      }
      underlineColorAndroid="transparent"
      value="" />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end"
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300
            },
            undefined
          ]
        }>
        <Text
          style={
            Object {
              "color": "#333333",
              "margin": 20
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center"
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0
              },
              Object {
                "flex": 1
              }
            ],
            Object {
              "borderColor": "#dfe5e6"
            }
          ]
        }>
        <Text
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center"
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "marginBottom": 17,
                  "marginTop": 15
                },
                Object {
                  "color": "#f77040"
                },
                Object {
                  "color": "#dfe5e6"
                }
              ]
            ]
          }>
          NEXT
        </Text>
      </View>
    </View>
  </View>
</View>
`;
